<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setting_rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_settingTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settingTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/tv_settingTitle"
        app:layout_constraintTop_toTopOf="@+id/tv_settingTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fontsize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settingTitle">

        <RadioGroup
            android:id="@+id/rg_fontsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <TextView
                android:id="@+id/tv_themeTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/fontSize" />

            <RadioButton
                android:id="@+id/radio_font_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fontSizeSmall" />

            <RadioButton
                android:id="@+id/radio_font_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fontSizeNormal" />

            <RadioButton
                android:id="@+id/radio_font_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fontSizeLarge" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fontsize">

        <RadioGroup
            android:id="@+id/rg_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/tv_fontSizeTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/theme" />

            <RadioButton
                android:id="@+id/radio_theme_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/themeDay" />

            <RadioButton
                android:id="@+id/radio_theme_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/themeNight" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>
